# ideahub

./: .gitignore  README.md
ideahub_app/: .env.example  pyproject.toml
ideahub_app/backend/: __init__.py  config.py  main.py
ideahub_app/backend/api/: __init__.py  ai.py  cards.py  crawler.py  upload.py
ideahub_app/backend/database/: __init__.py  models.py  session.py
ideahub_app/backend/schemas/: __init__.py  ai.py  card.py
ideahub_app/backend/services/: __init__.py  ai_search.py  card_service.py  crawler_manager.py  data_importer.py  link_parser.py  ocr_service.py
ideahub_app/backend/services/ai/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  prompts.py  provider_registry.py
ideahub_app/frontend/: index.html  package-lock.json  package.json  vite.config.ts
ideahub_app/frontend/src/: App.tsx  index.css
ideahub_app/frontend/src/components/: CardPreview.tsx  Layout.tsx  ModelCombobox.tsx
ideahub_app/frontend/src/pages/: CrawlerPage.tsx  CreatePage.tsx  DetailPage.tsx  HomePage.tsx  SettingsPage.tsx
ideahub_app/frontend/src/services/: api.ts
ideahub_app/frontend/src/types/: index.ts
